Minor code update -- basic testing for Authenticator class

--- a/hydra/authenticate.yaml
+++ b/hydra/authenticate.yaml
@@ -19,3 +19,7 @@ groups:
         inherits_from: admin            #Establish hierarchy
         commands:                       #No extra needed
           - '*'
+users:
+    bpurgaso:
+        group: creator
+
