--- a/hydra/config.yaml
+++ b/hydra/config.yaml
@@ -2,6 +2,10 @@ network : wright.freenode.net
 port : 6667
 nick : brobot
 
+channels:
+    hydratestchannel:
+        key: ''
+        autojoin: True
 defaultgroup : user
 groups:
     user:
